--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -418,13 +418,7 @@
 				<iframe style="width: 100%;height: 55%;" src="http://ianlunn.github.io/Hover/"></iframe>
 			</div>
 		</div>
-	    <div class="step slide">
-	        <h2>未来</h2>
-	        <div class="center">
-	        	<img src="css/images/html5-native1.jpg" alt="">
-	        	<i></i>
-	        </div>
-	    </div>
+	    
 	</div>
 	<script src="js/jquery.js"></script>
 	<script src="js/impress.js"></script>
