--- a/public/echartx/example/map3d_population3.html
+++ b/public/echartx/example/map3d_population3.html
@@ -50,10 +50,8 @@ $.ajax({
 
         myChart.setOption({
             title : {
-                text: 'Gridded Population of the World (2000)',
-                subtext: 'Data from Socioeconomic Data and Applications Center',
-                sublink : 'http://sedac.ciesin.columbia.edu/data/set/gpw-v3-population-density/data-download#close',
-                x:'center',
+                text: 'WebGL - 3D图表',
+                x:'left',
                 y:'top',
                 textStyle: {
                     color: 'white'
@@ -102,13 +100,6 @@ $.ajax({
         <script src="../lib/esl.js"></script>
         <script src="../lib/jquery.min.js"></script>
         <script src="js/bootExample.js"></script>
-
-        <script>
-        if (document.location.href.indexOf('local') == -1) {
-            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb78830c9a5dad062d08b90b2bc0cf5da' type='text/javascript'%3E%3C/script%3E"));   
-        }
-        </script>
 
     </body>
 </head>
