--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -281,8 +281,8 @@
 	    <div class="step slide">
 	    	<h2>想100%还原设计稿中的文字？</h2>
 			<section>
-				<img src="css/images/cool.png" style="width: 100%;">
-				
+				<img src="css/images/cool.png" class="animated zoomIn infinite" style="width: 100%;">
+
 				<p>吃字体的亏，上wording的当，最后死在切图上。<p>
 			</section>  
 			
