--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -384,10 +384,10 @@
 		</div>
 		<div class="step slide" id="image">
 			<h2>图像接口 - <span class="font-green">紧跟热点，利用话题</span></h2>
-			<img src="css/images/image-sdk-1.png" alt="">
-			<img src="css/images/image-sdk-2.png" alt="">
-			<img src="css/images/image-sdk-3.png" alt="" class="i-s-3">
-			<img src="css/images/image-sdk-4.png" alt="" class="i-s-4">
+			<img src="css/images/image-sdk-1.PNG" alt="">
+			<img src="css/images/image-sdk-2.PNG" alt="">
+			<img src="css/images/image-sdk-3.PNG" alt="" class="i-s-3">
+			<img src="css/images/image-sdk-4.PNG" alt="" class="i-s-4">
 		</div>
 		<div class="step slide" id="audio">
 			<h2>音频接口 - <span class="font-green">可口可乐的语音祝福</span></h2>
